<resources>
    <string name="app_name">Lao Note</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="sub_title">Sub Title</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="note_color">Note Color</string>
    <string name="font_color">Font Color</string>
    <string name="add_image">Add image</string>
    <string name="add_seb_link">Add web link</string>
    <string name="delete_note">Delete note</string>
    <string name="save">Save</string>
    <string name="add_note">Add note</string>
    <string name="permission_storage_rationale_message">This app must be allowed to access images and media</string>
    <string name="main_welcome">Welcome back!</string>
    <string name="email">Enter email</string>
    <string name="password">Password</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="log_in">LogIn</string>
    <string name="or_continue">Or continue with</string>
    <string name="skip">Skip</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="note_count">Notes count</string>
    <string name="task_count">Tasks count</string>
    <string name="event_count">Events count</string>
    <string name="logout">Logout</string>
    <string name="Theme">Theme</string>
    <string name="light_dark">Light/Dark</string>
    <string name="data_sync">Sync notes</string>
    <string name="desc_data_sync">Enabling this option will ensure that your data are preserved even after deleting and reinstalling the app from your phone</string>
    <string name="tasks">Tasks</string>
    <string name="events">Events</string>
    <string name="add_task">Add task</string>
    <string name="add_event">Add event</string>
    <string name="add">Add</string>
    <string name="select_date">Select date</string>
    <string name="url_valid">Url is not valid</string>
    <string name="successful">Successful</string>
    <string name="failure">Failure</string>
    <string name="loading">Please wait....</string>
    <string name="email_blank_msg">Email can\'t be empty</string>
    <string name="email_valied_msg">Email must be valid</string>
    <string name="new_password_error_msg">Password must be greater than 6 digits</string>
    <string name="title_blank_msg">Title can\'t be empty</string>
    <string name="date_blank_msg">You should set date</string>
    <string name="event_title_blank_msg">Event title can\'t be empty</string>
    <string name="edit">Edit</string>
    <string name="date_created">Date created:</string>
    <string name="last_date">Last updated:</string>
    <string name="failed_upolad_message">Failed upolad image</string>
    <string name="userName">User Name</string>
    <string name="result_search_empty">No result match</string>
    <string name="search_note">Search your notes</string>
    <string name="search_task">Search your tasks</string>
    <string name="log_in_with_google">LogIn with Google</string>
    <string name="completed_task">Completed tasks</string>
    <string name="incomplete_task">Incomplete tasks</string>
    <string name="all_task">All</string>
</resources>
