<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="note"
            type="com.sajjadio.laonote.domain.model.Note" />

        <import type="android.view.View" />

    </data>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            app:setBackgroundColor="@{note.note_color}">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:visibility="@{note.note_image.empty ?View.GONE:View.VISIBLE}"
                app:riv_corner_radius_top_left="@dimen/_10sdp"
                app:riv_corner_radius_top_right="@dimen/_10sdp"
                app:setImage="@{note.note_image}" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/Title"
                android:text="@{note.note_title}"
                app:setFontColor="@{note.font_color}"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tvSubTitle"
                style="@style/SubTitle"
                android:visibility="@{note.note_subTitle.empty ?View.GONE:View.VISIBLE}"
                app:setFontColor="@{note.font_color}"
                app:setText="@{note.note_subTitle}"
                tools:text="@string/sub_title" />

            <TextView
                android:id="@+id/tvDesc"
                style="@style/Description"
                android:visibility="@{note.note_description.empty ?View.GONE:View.VISIBLE}"
                app:setFontColor="@{note.font_color}"
                app:setText="@{note.note_description}"
                tools:text="@string/desc" />

            <TextView
                android:id="@+id/etNoteWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center|start"
                android:fontFamily="@font/cabin_medium"
                android:minHeight="48dp"
                android:text="@{note.note_webUrl}"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_14ssp"
                android:visibility="@{note.note_webUrl.empty ?View.GONE:View.VISIBLE}"
                tools:text="www.google.com" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/cabin_medium"
                android:gravity="start|center"
                android:text="@{note.note_date_created}"
                android:textAlignment="viewStart"
                android:textSize="@dimen/_12ssp"
                app:setFontColor="@{note.font_color}"
                tools:text="Dec 5, 2022 20:10:44" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>