<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sajjadio.laonote.presentation.ui.profile.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/materialToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    app:navigationIcon="@drawable/ic_back"
                    app:title="@string/profile">

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.AppBarLayout>


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                app:riv_border_color="@color/colorSecond"
                app:riv_border_width="@dimen/_2sdp"
                app:riv_corner_radius="@dimen/_50sdp"
                app:riv_oval="true"
                app:riv_tile_mode="clamp"
                app:setImage="@{viewModel.user.photo}"
                tools:src="@drawable/person" />

            <ImageButton
                android:id="@+id/editBtn"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_85sdp"
                android:background="@drawable/shape_of_effect_edit_round"
                android:src="@drawable/ic_edit"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="@+id/profileImage" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/oxygen_bold"
                android:text="@{viewModel.user.userName}"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_18sdp"
                android:visibility="@{viewModel.isLogIn() ?View.VISIBLE: View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editBtn"
                tools:text="Mohammed Aziz" />

            <TextView
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape_of_effect_btn"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/oxygen_bold"
                android:padding="@dimen/_6sdp"
                android:text="@string/log_in"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_18sdp"
                android:visibility="@{viewModel.isLogIn() ?View.GONE: View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editBtn"
                tools:text="Mohammed Aziz" />


            <TextView
                android:id="@+id/settings"
                style="@style/FieldsProfile"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/shape_of_effect_btn"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/settings"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                tools:ignore="RtlSymmetry" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/color_border"
                app:layout_constraintEnd_toEndOf="@+id/settings"
                app:layout_constraintStart_toStartOf="@+id/settings"
                app:layout_constraintTop_toBottomOf="@+id/settings" />

            <TextView
                android:id="@+id/about"
                style="@style/FieldsProfile"
                android:background="@drawable/shape_of_effect_btn"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/about"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_about"
                app:layout_constraintEnd_toEndOf="@+id/settings"
                app:layout_constraintStart_toStartOf="@+id/settings"
                app:layout_constraintTop_toBottomOf="@+id/settings"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/color_border"
                app:layout_constraintEnd_toEndOf="@+id/about"
                app:layout_constraintStart_toStartOf="@+id/about"
                app:layout_constraintTop_toBottomOf="@+id/about" />


            <TextView
                android:id="@+id/logout"
                style="@style/FieldsProfile"
                android:background="@drawable/shape_of_effect_btn"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/logout"
                android:visibility="@{viewModel.isLogIn() ?View.VISIBLE: View.GONE}"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_logout"
                app:layout_constraintEnd_toEndOf="@+id/about"
                app:layout_constraintStart_toStartOf="@+id/about"
                app:layout_constraintTop_toBottomOf="@+id/about"
                tools:ignore="RtlSymmetry" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/color_border"
                android:visibility="@{viewModel.isLogIn() ?View.VISIBLE: View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/logout"
                app:layout_constraintStart_toStartOf="@+id/logout"
                app:layout_constraintTop_toBottomOf="@+id/logout" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</layout>